--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "postcss": "^8.4.38",
     "standard": "^17.1.0",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0",
-    "vite-plugin-robots": "^1.0.5"
+    "vite": "^5.2.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
